gstreamer-full links to both libsoup-2.4 and libsoup-3.0, which causes an abort
ninja: Entering directory `/home/kayou/gstreamer/builddir'
[2/3] Generating Gst-1.0.gir with a custom command
FAILED: Gst-1.0.gir
/usr/bin/g-ir-scanner --no-libtool --namespace=Gst --nsversion=1.0 --warn-all --output Gst-1.0.gir '--add-init-section=extern void gst_init(gint*,gchar**);g_setenv("GST_REGISTRY_DISABLE", "yes", TRUE);g_setenv("GST_REGISTRY_1.0", "/no/way/this/exists.reg", TRUE);g_setenv("GST_PLUGIN_PATH_1_0", "", TRUE);g_setenv("GST_PLUGIN_SYSTEM_PATH_1_0", "", TRUE);gst_init(NULL,NULL);' --quiet --c-include=gst/gst.h --cflags-begin -I/home/kayou/gstreamer/subprojects/gstreamer/gst/.. -I/home/kayou/gstreamer/builddir/subprojects/gstreamer/gst/.. -DGST_DISABLE_MINIOBJECT_INLINE_FUNCTIONS --cflags-end --add-include-path=/home/kayou/gstreamer/builddir -I/home/kayou/gstreamer/ -I/home/kayou/gstreamer/builddir/ -I/home/kayou/gstreamer/subprojects/gstreamer/. -I/home/kayou/gstreamer/builddir/subprojects/gstreamer/. -I/home/kayou/gstreamer/subprojects/gstreamer/. -I/home/kayou/gstreamer/builddir/subprojects/gstreamer/. --filelist=/home/kayou/gstreamer/builddir/libgstreamer-full-1.0.so.p/Gst_1.0_gir_filelist --include=GLib-2.0 --include=GObject-2.0 --include=GModule-2.0 --symbol-prefix=gst --identifier-prefix=Gst --pkg-export=gstreamer-1.0 --cflags-begin -I/home/kayou/gstreamer/subprojects/gstreamer/. -I/home/kayou/gstreamer/builddir/subprojects/gstreamer/. -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/sysprof-4 -I/usr/include/gobject-introspection-1.0 --cflags-end --add-include-path=/usr/share/gir-1.0 -L/home/kayou/gstreamer/builddir/ --library gstreamer-full-1.0 --extra-library=glib-2.0 --extra-library=gobject-2.0 --extra-library=gmodule-2.0 --extra-library=girepository-1.0 --sources-top-dirs /home/kayou/gstreamer/subprojects/ --sources-top-dirs /home/kayou/gstreamer/builddir/subprojects/
(process:128960): libsoup-ERROR **: 09:15:12.394: libsoup3 symbols detected. Using libsoup2 and libsoup3 in the same process is not supported.
Command '['/home/kayou/gstreamer/builddir/tmp-introspect6pupsmq7/Gst-1.0', '--introspect-dump=/home/kayou/gstreamer/builddir/tmp-introspect6pupsmq7/functions.txt,/home/kayou/gstreamer/builddir/tmp-introspect6pupsmq7/dump.xml']' died with <Signals.SIGTRAP: 5>.
ninja: build stopped: subcommand failed.
See: #1111 (comment 1315275)